--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   image_picker: ^0.8.5+3
   path_provider: 2.0.10
   sqflite: ^2.0.0+3
+  geolocator: ^8.2.1
 
   #store & load data
   shared_preferences: ^2.0.13
